k8s-lab/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
        - name: hello-app
          image: ekaterinavol/k8s-hello-app:latest
          ports:
            - containerPort: 8080
